fixes chip cropping | E1-2479

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -1869,7 +1869,7 @@
       }
     }
   }
-  .gold-bg-theme,
+  /* .gold-bg-theme,
   .blue-bg-theme {
     .plan-card.tile-table {
       .tile-card {
@@ -1880,7 +1880,7 @@
         }
       }
     }
-  }
+  } */
   ul.featureList li b,
   ul.featureList li strong {
     color: $blue2;
